Rework of the Server List. Many Bugfixes (see Mail).

--- a/modules-available/locationinfo/templates/config.html
+++ b/modules-available/locationinfo/templates/config.html
@@ -17,7 +17,7 @@
 		<div style="float: left; margin-left: 15px;">
 			<Label>{{lang_serverRoomId}}</Label><br>
 			<input name="serverroomid" id="serverroomid" value="{{serverroomid}}"
-					 style="width: 250px; text-align: center;"></input>
+					 style="width: 250px; text-align: center;">
 		</div>
 
 
